# canary

./: .dockerignore  .gitignore  .phase1-tasks.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  FEATURES.md  LICENSE-APACHE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  run_migration.sh
crates/canary-api/: Cargo.toml
crates/canary-api/src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  router.rs  websocket.rs
crates/canary-capture/: Cargo.toml
crates/canary-capture/src/: capture.rs  filter.rs  lib.rs  logger.rs  replay.rs
crates/canary-cli/: Cargo.toml  README.md
crates/canary-cli/src/: main.rs
crates/canary-cli/src/commands/: adapter.rs  can.rs  ecu.rs  live.rs  mod.rs  module.rs
crates/canary-core/: Cargo.toml
crates/canary-core/examples/: basic_usage.rs  dtc_analysis.rs  protocol_decoding.rs  service_procedures.rs
crates/canary-core/src/: lib.rs
crates/canary-data/: Cargo.toml  build.rs
crates/canary-data/data/: manufacturers.toml
crates/canary-data/data/dtc/: powertrain.toml
crates/canary-data/data/manufacturers/: index.json
crates/canary-data/data/manufacturers/audi/: ecm.toml  metadata.json
crates/canary-data/data/manufacturers/bmw/: ecm.toml  metadata.json
crates/canary-data/data/manufacturers/dodge_ram/: ecm.toml
crates/canary-data/data/manufacturers/ford/: bcm.toml  metadata.json  pcm.toml
crates/canary-data/data/manufacturers/gm/: ecm.toml  metadata.json  pcm.toml
crates/canary-data/data/manufacturers/honda/: ecm.toml  tcm.toml
crates/canary-data/data/manufacturers/hyundai/: ecm.toml
crates/canary-data/data/manufacturers/jeep/: ecm.toml
crates/canary-data/data/manufacturers/kia/: ecm.toml
crates/canary-data/data/manufacturers/mazda/: ecm.toml
crates/canary-data/data/manufacturers/mercedes/: ecm.toml
crates/canary-data/data/manufacturers/nissan/: ecm.toml  tcm.toml
crates/canary-data/data/manufacturers/skoda/: additional.toml  ecm.toml  metadata.json
crates/canary-data/data/manufacturers/subaru/: ecm.toml
crates/canary-data/data/manufacturers/toyota/: ecm.toml  metadata.json  rav4_ecm.toml
crates/canary-data/data/manufacturers/vw/: additional.toml  ecm.toml  metadata.json  tcm.toml  test.toml
crates/canary-data/data/pinouts/universal/: obd2_j1962.toml
crates/canary-data/data/protocols/: can_2.0b.toml
crates/canary-data/data/service_procedures/: brake_bleeding.toml  oil_change.toml
crates/canary-data/data/universal/: obd2_j1962.toml
crates/canary-data/src/: lazy.rs  lib.rs
crates/canary-database/: Cargo.toml
crates/canary-database/src/: lib.rs
crates/canary-dtc/: Cargo.toml
crates/canary-dtc/src/: lib.rs
crates/canary-hardware/: Cargo.toml
crates/canary-hardware/src/: adapter_trait.rs  bluetooth_adapter.rs  error.rs  lib.rs  network_protocol.rs  obd_vendor.rs  socketcan_adapter.rs  virtual_adapter.rs  wifi_adapter.rs
crates/canary-models/: Cargo.toml
crates/canary-models/src/: error.rs  lib.rs
crates/canary-models/src/dto/: mod.rs
crates/canary-models/src/embedded/: connector.rs  dtc.rs  ecu.rs  manufacturer.rs  metadata.rs  mod.rs  pinout.rs  protocol.rs  service_proc.rs
crates/canary-models/src/internal/: mod.rs
crates/canary-models/tests/: ecu_models_test.rs
crates/canary-pinout/: Cargo.toml
crates/canary-pinout/src/: lib.rs
crates/canary-pinout/tests/: ecu_lookup_test.rs
crates/canary-premium/: Cargo.toml
crates/canary-premium/src/: cloud_sync.rs  encryption.rs  error.rs  lib.rs  license.rs  marketplace.rs
crates/canary-protocol/: Cargo.toml
crates/canary-protocol/src/: lib.rs
crates/canary-security/: Cargo.toml
crates/canary-security/src/: keygen.rs  lib.rs
crates/canary-security/src/algorithms/: ford.rs  gm.rs  mod.rs  vw_group.rs
crates/canary-service-proc/: Cargo.toml
crates/canary-service-proc/src/: lib.rs
crates/canary-uds/: Cargo.toml
crates/canary-uds/src/: error.rs  lib.rs  monitor.rs  session.rs
crates/canary-uds/src/services/: download.rs  io_control.rs  mod.rs  read_data.rs  read_dtc.rs  routine.rs  security_access.rs  session_control.rs  write_data.rs
docker/can-simulator/: .dockerignore  Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md  TESTING.md  run-simulator.sh  setup-vcan.sh
docker/can-simulator/src/: ecu_simulator.rs  lib.rs  main.rs
docker/can-simulator/src/simulators/: ford_f150_pcm.rs  gm_silverado_ecm.rs  mod.rs  vw_golf_ecm.rs
docs/superpowers/plans/: 2026-03-26-phase1-foundation-mvp.md  2026-03-26-phase2-automation.md  2026-03-26-phase3-community-scale.md
docs/superpowers/specs/: 2026-03-26-canary-data-expansion-design.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260326_000001_create_canary_schema.rs  m20260326_000002_create_custom_pinouts.rs  m20260326_000003_create_custom_dtc_notes.rs  m20260326_000004_create_service_logs.rs  main.rs
mobile/: App.tsx  app.json  package.json
mobile/src/: App.tsx
mobile/src/screens/: DashboardScreen.tsx  DtcScreen.tsx  EcuScreen.tsx
mobile/src/services/: api.ts
mobile/src/types/: index.ts
tests/: phase1_integration_test.rs
web/: index.html  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ConnectionStatus.tsx  DtcTable.tsx  LiveChart.tsx  LiveGauge.tsx  Sidebar.tsx
web/src/hooks/: useLiveData.ts
web/src/pages/: Dashboard.tsx  DtcPage.tsx  EcuPage.tsx  LiveMonitor.tsx  Sessions.tsx
web/src/services/: api.ts  websocket.ts
web/src/types/: index.ts
