[package]
name = "canary-workspace"
version = "0.1.0"
edition = "2021"
publish = false

# Workspace integration tests
[[test]]
name = "phase1_integration_test"
path = "tests/phase1_integration_test.rs"

[dependencies]
canary-core = { path = "crates/canary-core" }
canary-models = { path = "crates/canary-models" }

[workspace]
resolver = "2"
members = [
    "crates/canary-core",
    "crates/canary-models",
    "crates/canary-database",
    "crates/canary-pinout",
    "crates/canary-protocol",
    "crates/canary-dtc",
    "crates/canary-service-proc",
    "crates/canary-data",
    "crates/canary-hardware",
    "crates/canary-uds",
    "crates/canary-cli",
    "migration", "docker/can-simulator",
]

[workspace.dependencies]
# Core Rust
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sea-orm = { version = "1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }

# Data parsing
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Canary Contributors"]
license = "MIT OR Apache-2.0"
