[package]
name = "canary-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API server with WebSocket streaming for Canary diagnostics"

[dependencies]
canary-core = { path = "../canary-core" }
canary-models = { path = "../canary-models" }
canary-hardware = { path = "../canary-hardware" }
canary-uds = { path = "../canary-uds" }
canary-premium = { path = "../canary-premium" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
